# brebot

./: .gitignore  ARCHITECTURE.md  CONNECTIONS_GUIDE.md  GETTING_STARTED.md  MAC_APP_SETUP.md  MCP_INTEGRATION.md  README.md  SYSTEM_PROMPTS_GUIDE.md  VOICE_COMMUNICATION_GUIDE.md  WEB_AUTOMATION_GUIDE.md  WEB_INTERFACE.md  brebot-modelfile.txt  connection_encryption.key  env.example  requirements.txt  setup.sh  test-app.sh  test_mac_app.sh
bots/mocktopus/: mocktopus_bot.py
desktop/tauri-app/: package-lock.json  package.json
desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-app/src-tauri/icons/: icon.icns
desktop/tauri-app/src-tauri/src/: main.rs
docker/: Dockerfile  Dockerfile-brebot  README.md  docker-compose.yml
docker/redis_data/: dump.rdb
docker/scripts/: setup_models.sh
docs/: MCP_SUPPORT.md  desktop_app.md  n8n_integration.md  phase1_action_items.md  phase1_persistence_plan.md  platform_integrations_setup.md  workspace_structure.md
docs/airtable/: brebot_ops_schema.md
docs/examples/: chat_ingestion.md  chat_retrieval.md
mac-app/: brebot-launcher.sh  brebot-menu-bar.sh  install-app.sh
scripts/: ingest_chat_history.py  launch.sh  setup_workspace.py  start_mcp_server.sh
shared/bot-interface/: bot_interface.py  requirements.txt
src/: __init__.py  brebot_crew.py  main.py  router.py
src/agents/: __init__.py  file_organizer_agent.py  marketing_agent.py  web_automation_agent.py  web_design_agent.py
src/config/: __init__.py  settings.py  storage.py  system_prompts.py
src/integrations/: n8n_client.py
src/web/: app.py
(+45 files in other folders)
