[package]
name = "brebot-desktop"
version = "1.0.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1", features = [ "http-all", "custom-protocol", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
